pkgs/io_file/src/libc_shim.h

// <dirent.h>

struct libc_shim_dirent {
  int64_t d_ino;
  char d_name[512];
};
typedef struct {
  struct libc_shim_dirent libc_shim_dirent;
  void *_dir;
} libc_shim_DIR;
LIBC_SHIM_EXPORT int libc_shim_closedir(libc_shim_DIR *d);
LIBC_SHIM_EXPORT libc_shim_DIR *libc_shim_opendir(const char *path);
LIBC_SHIM_EXPORT struct libc_shim_dirent *libc_shim_readdir(libc_shim_DIR *d);
// <errno.h>
LIBC_SHIM_EXPORT void libc_shim_seterrno(int err);
LIBC_SHIM_EXPORT int libc_shim_errno(void);
struct libc_shim_Stat {
  int64_t st_dev;
  int64_t st_ino;
  int64_t st_mode;
  int64_t st_nlink;
  int64_t std_uid;
  int64_t st_size;

  struct libc_shim_timespec st_atim;
  struct libc_shim_timespec st_mtim;
  struct libc_shim_timespec st_ctim;
  // Only valid on macOS/iOS
  struct libc_shim_timespec st_btime;

  // Only valid on macOS/iOS
  int64_t st_flags;
};
LIBC_SHIM_EXPORT int libc_shim_stat(const char *path,
                                    struct libc_shim_Stat *buf);
LIBC_SHIM_EXPORT int libc_shim_lstat(const char *path,
                                     struct libc_shim_Stat *buf);
LIBC_SHIM_EXPORT int libc_shim_fstat(int fd, struct libc_shim_Stat *buf);